--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/fonts": "^0.11.2",
     "@pinia/nuxt": "^0.11.0",
     "@provetcloud/css": "^1.1.0",
+    "@provetcloud/themes": "^1.0.0",
     "@provetcloud/web-components": "^1.3.3",
     "@tailwindcss/vite": "^4.1.5",
     "@vueuse/nuxt": "^13.1.0",
