--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "analyze": "nuxi analyze --root src/",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/eslint": "^1.3.0",
     "@pinia/nuxt": "^0.11.0",
     "@provetcloud/css": "^1.1.0",
     "@provetcloud/themes": "^1.0.0",
     "@provetcloud/web-components": "^1.3.3",
     "@tailwindcss/vite": "^4.1.5",
     "@vueuse/nuxt": "^13.1.0",
+    "eslint": "^9.25.1",
     "nuxt": "^3.17.1",
     "pinia": "^3.0.2",
     "tailwindcss": "^4.1.5",
@@ -24,8 +29,11 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.17.2",
+    "@pinia/testing": "^1.0.1",
     "@provetcloud/web-components-vue-types": "^1.3.3",
     "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^17.4.6",
+    "jsdom": "^26.1.0",
     "vitest": "^3.1.2"
   }
 }
